syntax = "proto3";

package menu;

message Menu {
  string id = 1;
  string menuName = 2;
  string menuDescription = 3;
  string menuUri = 4;
  string menuOrder = 5;
  string menuIdParent = 6;
}

// *********** DTO ***********
message Create {
  string menuName = 1;
  string menuDescription = 2;
  string menuUri = 3;
  string menuOrder = 4;
  string menuIdParent = 5;
}

message Update {
  string id = 1;
  string menuName = 2;
  string menuDescription = 3;
  string menuUri = 4;
  string menuOrder = 5;
  string menuIdParent = 6;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string menuName = 2;
  string menuDescription = 3;
  string menuUri = 4;
  string menuOrder = 5;
  string menuIdParent = 6;
}

// *********** One ***********
message One {
  Menu data = 1;
}

// *********** Many ***********
message Many {
  repeated Menu data = 1;
}

service MenuService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}