syntax = "proto3";

package profile;

message Profile {
  string id = 1;
  string profileName = 2;
  string profileDescription = 3;
}

// *********** DTO ***********
message Create {
  string profileName = 1;
  string profileDescription = 2;
}

message Update {
  string id = 1;
  string profileName = 2;
  string profileDescription = 3;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string profileName = 2;
  string profileDescription = 3;
}

// *********** One ***********
message One {
  Profile data = 1;
}

// *********** Many ***********
message Many {
  repeated Profile data = 1;
}

service ProfileService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}