// Original file: src/protos/6/menu.proto

export interface Create {
  menuName?: string;
  menuDescription?: string;
  menuUri?: string;
  menuOrder?: string;
  menuIdParent?: string;
}

export interface Create__Output {
  menuName: string;
  menuDescription: string;
  menuUri: string;
  menuOrder: string;
  menuIdParent: string;
}
