// Original file: src/protos/6/menu.proto


export interface Update {
  'id'?: (string);
  'menuName'?: (string);
  'menuDescription'?: (string);
  'menuUri'?: (string);
  'menuOrder'?: (string);
  'menuIdParent'?: (string);
}

export interface Update__Output {
  'id': (string);
  'menuName': (string);
  'menuDescription': (string);
  'menuUri': (string);
  'menuOrder': (string);
  'menuIdParent': (string);
}
